Bug 55971 - redefined error in 2.6.32-279.22.1.el6.x86_64 kernel
Summary: redefined error in 2.6.32-279.22.1.el6.x86_64 kernel
Status: CLOSED CODE_FIX
Alias: None
Product: Backports project
Classification: Unclassified
Component: Backports (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andy Gospodarek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-30 07:32 UTC by sihara
Modified: 2017-02-09 16:34 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.32-279.22.1.el6.x86_64
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Initial fix for 6.3 update kernel (4.64 KB, patch)
2013-04-03 21:15 UTC, Andy Gospodarek
Details | Diff
fixup of breakage from a05e783cb8853210628bd1f2bd82d17dd004c9d1 (914 bytes, patch)
2013-04-03 21:44 UTC, Andy Gospodarek
Details | Diff

Description sihara 2013-03-30 07:32:00 UTC
Since RHEL6.3's security updated kernel (2.6.32-279.22.1.el6.x86_64) has
included two macros (rcu_dereference_protected and kfree_rcu) in
include/linux/rcupdate.h

These were not existed in original RHEL6.3's kernel (2.6.32-279) and even the
previous kernel of 2.6.32-279.22.1.el6.x86_64.

The other hand, these macros are defined in include/linux/compat-x.z.h.
(rcu_dereference_protected in compat-2.6.34.h and kfree_rcu in compat-3.0.h).

It needs to check in compat headers wether these macro are defined or not,
doesn't it now? otherwise we see redefined error if both kernel header and
compat headers are included for the souce codes..
Comment 1 sihara 2013-03-31 00:58:00 UTC
> It needs to check in compat headers wether these macro are defined or not,
> doesn't it now? otherwise we see redefined error if both kernel header and
> compat headers are included for the souce codes..

oops.. typo s/wether/whether/
Comment 2 Andy Gospodarek 2013-04-03 14:31:26 UTC
This should be pretty easy to fix.  I'll fire up a RHEL6.3 host with the latest kernel and verify a fix.
Comment 3 Andy Gospodarek 2013-04-03 21:15:49 UTC
Created attachment 97241 [details]
Initial fix for 6.3 update kernel

This has not been tested other than to be sure it compiles.  I'll post to the list once I receive confirmation that it works for the reporter.
Comment 4 Andy Gospodarek 2013-04-03 21:44:51 UTC
Created attachment 97251 [details]
fixup of breakage from a05e783cb8853210628bd1f2bd82d17dd004c9d1

You will need this patch, too.
Comment 5 sihara 2013-04-03 21:58:46 UTC
Thanks, I will test them shortly!
Comment 6 Andy Gospodarek 2013-04-05 17:35:12 UTC
Patches accepted into new backports project.  Closing.

Note You need to log in before you can comment on or make changes to this bug.