backport/include/linux/compat-2.6.34.h
@@ -290,7 +290,9 @@ static inline int usb_enable_autosuspend(struct usb_device *udev)
 static inline int usb_disable_autosuspend(struct usb_device *udev)
 { return 0; }
 
+#if !defined(rcu_dereference_protected)
 #define rcu_dereference_protected(p, c) (p)
+#endif
 #define rcu_access_pointer(p)   ACCESS_ONCE(p)
 
 #define rcu_dereference_raw(p)	rcu_dereference(p)
